# Smartops-An-AI-Assisted-Infrastructure-Monitoring-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-agent.txt  requirements.txt  setup.py
agent/: __init__.py  agent.py  collector.py  config.py  log_collector.py  retry.py  sender.py
agents/: __init__.py  agent.py  collector.py  sender.py
ai_engine/: __init__.py  diagnostics.py  gemini_client.py  openai_client.py  rule_engine.py  rules.py
api/: __init__.py  dependencies.py  gemini_client.py  main.py  schemas.py
api/middleware/: __init__.py  logging_middleware.py
config/: settings.yml
dashboard/: __init__.py  app.py
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.dashboard
docs/: architecture.md
scripts/: init_db.sql  run_all.sh  seed_data.py
shared/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_ai_engine.py  test_api.py  test_auth.py  test_collector.py  test_incident_service.py  test_log_collector.py  test_retry.py  test_server_service.py  test_services.py
